tests/cases/errors/runtime_too_many_arguments.lox
// Passing more arguments than the function's arity is a runtime error.
// expect runtime error: Expected 1 arguments but got 3
fun id(x) { return x; }
id(1, 2, 3);
